refactor(mobilertapp): Fix more linter warnings
Test plan:
* Pipeline passes